--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+project/*
 
 # Scala-IDE specific
 .scala_dependencies
@@ -18,3 +19,4 @@ project/plugins/project/
 
 # IntelliJ specific
 .idea
+*.iml
